# midi-push-talk

./: README.md  main.py  pyproject.toml
midi_push_talk/: __main__.py
