[tool.poetry]
name = "midi-talk"
version = "0.1.0"
description = ""
authors = ["jnnkB <29376715+jnnkB@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mido = "^1.2.9"
python-rtmidi = "^1.4.1"
pynput = "^1.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
